--- a/index.html
+++ b/index.html
@@ -3,240 +3,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NeonCore - RPG Cyberpunk</title>
+  <title>NeonCore RPG</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0f0f0f;
-      color: #f0f0f0;
-      line-height: 1.6;
-      padding: 0;
+      background: url('https://wallpapercave.com/wp/wp6927507.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
     }
-    nav {
-      background-color: #000;
+
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
       padding: 1rem;
       display: flex;
-      justify-content: center;
-      gap: 2rem;
+      justify-content: space-between;
+      align-items: center;
       border-bottom: 2px solid #00ffe1;
     }
-    nav a {
-      color: #00ffe1;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #ff00ff;
-    }
-    .container {
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 3rem;
-    }
+
     header h1 {
-      font-size: 3rem;
       color: #00ffe1;
+      font-size: 2rem;
       margin: 0;
     }
-    section {
-      margin-bottom: 4rem;
+
+    nav a {
+      color: #ff00ff;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
     }
-    h2 {
+
+    nav a:hover {
       color: #00ffe1;
+    }
+
+    section {
+      background-color: rgba(0, 0, 0, 0.75);
+      margin: 2rem;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00ffe1;
+    }
+
+    h2 {
       border-left: 4px solid #00ffe1;
       padding-left: 0.5rem;
+      color: #00ffe1;
     }
-    .tabs {
-      display: flex;
-      gap: 1rem;
-      margin-bottom: 1rem;
-    }
-    .tabs button {
-      background-color: #1a1a1a;
+
+    .botao {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      margin-top: 1rem;
+      background-color: #ff00ff;
+      color: #000;
+      font-weight: bold;
       border: none;
-      padding: 0.5rem 1rem;
-      color: #f0f0f0;
-      cursor: pointer;
       border-radius: 5px;
+      text-decoration: none;
+      transition: 0.3s;
     }
-    .tabs button.active {
+
+    .botao:hover {
       background-color: #00ffe1;
       color: #000;
-    }
-    .tab-content {
-      display: none;
-    }
-    .tab-content.active {
-      display: block;
-    }
-    .character-card {
-      display: flex;
-      gap: 1rem;
-      background-color: #1a1a1a;
-      padding: 1rem;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-      align-items: center;
-    }
-    .character-card img {
-      width: 60px;
-      height: 60px;
-      border-radius: 6px;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>NeonCore RPG</h1>
+    <nav>
+      <a href="#inicio">Início</a>
+      <a href="#personagens">Personagens</a>
+      <a href="#contato">Contato</a>
+    </nav>
+  </header>
 
-  <nav>
-    <a href="#inicio">Início</a>
-    <a href="#personagens">Personagens</a>
-    <a href="#contato">Contato</a>
-  </nav>
+  <section id="inicio">
+    <h2>Bem-vindo ao NeonCore RPG</h2>
+    <p>Vivencie um futuro distópico em Neo-Tóquio, onde você enfrentará corporações, hackers e implantes cibernéticos.</p>
+    <a class="botao" href="#personagens">Escolha seu personagem</a>
+  </section>
 
-  <div class="container">
-    <header id="inicio">
-      <h1>NeonCore – RPG Cyberpunk</h1>
-      <p>Ambientado em 2187 – Neo-Tóquio</p>
-    </header>
+  <section id="personagens">
+    <h2>Personagens</h2>
+    <ul>
+      <li><strong>Nyx:</strong> Especialista em espionagem com próteses ópticas que enxergam o invisível.</li>
+      <li><strong>Vektor:</strong> Hacker capaz de invadir qualquer sistema com um gesto.</li>
+      <li><strong>Ravena:</strong> Tecnomante com habilidades de controlar máquinas com a mente.</li>
+    </ul>
+  </section>
 
-    <section>
-      <h2>1. Introdução</h2>
-      <p>Em um futuro distorcido por corporações, implantes cibernéticos e vigilância constante, os jogadores interpretam personagens à margem da sociedade lutando por liberdade, justiça — ou apenas sobrevivência.</p>
-    </section>
-
-    <section>
-      <h2>2. Sistema de Regras (Leve)</h2>
-      <ul>
-        <li><strong>Dados Usados:</strong> Apenas 1d6</li>
-        <li><strong>Testes de Ação:</strong> 1–2: Fracasso, 3–4: Sucesso Parcial, 5–6: Sucesso Total</li>
-        <li><strong>Atributos:</strong>
-          <ul>
-            <li>Corpo – força, resistência, combate</li>
-            <li>Mente – lógica, tecnologia, conhecimento</li>
-            <li>Presença – carisma, persuasão, influência</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>3. Criação de Personagem</h2>
-      <p>Escolha nome, profissão, aparência, motivação e um arquétipo:</p>
-      <ul>
-        <li>Mercenário</li>
-        <li>Hacker</li>
-        <li>Tecnomante</li>
-        <li>Espião</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>4. Equipamentos e Cibernéticos</h2>
-      <p>Cada personagem começa com 1 implante cibernético, além de itens como arma e comunicador.</p>
-    </section>
-
-    <section>
-      <h2>5. Cenário: Neo-Tóquio, 2187</h2>
-      <p>Mega arranha-céus, luzes de néon, zonas de exclusão, e corporações como ZENNET e Takashi BioTek controlam o mundo.</p>
-    </section>
-
-    <section>
-      <h2>6. Inspirações</h2>
-      <p>Cyberpunk: Edgerunners, Blade Runner, Ghost in the Shell, Akira.</p>
-    </section>
-
-    <section>
-      <h2>7. Como Jogar</h2>
-      <p>Um jogador assume o papel de Narrador. Os outros interpretam personagens em missões, rolando dados sempre que houver risco ou incerteza.</p>
-    </section>
-
-    <section id="personagens">
-      <h2>8. Personagens Jogáveis</h2>
-      <div class="tabs">
-        <button class="tab-btn active" onclick="showTab(0)">Nyx</button>
-        <button class="tab-btn" onclick="showTab(1)">Vektor</button>
-        <button class="tab-btn" onclick="showTab(2)">Ravena</button>
-        <button class="tab-btn" onclick="showTab(3)">Zero</button>
-        <button class="tab-btn" onclick="showTab(4)">Sombra</button>
-        <button class="tab-btn" onclick="showTab(5)">Neon</button>
-      </div>
-
-      <div class="tab-content active">
-        <div class="character-card">
-          <img src="https://via.placeholder.com/60" alt="Nyx">
-          <div>
-            <strong>Nyx</strong>
-            <p>Especialista em infiltração e espionagem. Suas próteses ópticas enxergam o invisível.</p>
-          </div>
-        </div>
-      </div>
-      <div class="tab-content">
-        <div class="character-card">
-          <img src="https://via.placeholder.com/60" alt="Vektor">
-          <div>
-            <strong>Vektor</strong>
-            <p>Hacker prodígio, capaz de invadir qualquer rede com apenas um gesto.</p>
-          </div>
-        </div>
-      </div>
-      <div class="tab-content">
-        <div class="character-card">
-          <img src="https://via.placeholder.com/60" alt="Ravena">
-          <div>
-            <strong>Ravena</strong>
-            <p>Especialista em drones e vigilância aérea, com uma rede de espionagem pessoal.</p>
-          </div>
-        </div>
-      </div>
-      <div class="tab-content">
-        <div class="character-card">
-          <img src="https://via.placeholder.com/60" alt="Zero">
-          <div>
-            <strong>Zero</strong>
-            <p>Ex-samurai corporativo, mestre com lâminas de energia e implantes de combate.</p>
-          </div>
-        </div>
-      </div>
-      <div class="tab-content">
-        <div class="character-card">
-          <img src="https://via.placeholder.com/60" alt="Sombra">
-          <div>
-            <strong>Sombra</strong>
-            <p>Assassina biohackeada com invisibilidade térmica e sentidos aguçados.</p>
-          </div>
-        </div>
-      </div>
-      <div class="tab-content">
-        <div class="character-card">
-          <img src="https://via.placeholder.com/60" alt="Neon">
-          <div>
-            <strong>Neon</strong>
-            <p>Artista de rua com habilidades de controle de luz e hologramas para enganar inimigos.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contato">
-      <h2>9. Contato</h2>
-      <p>Para dúvidas ou sugestões, envie uma mensagem para o criador do NeonCore RPG.</p>
-    </section>
-  </div>
-
-  <script>
-    function showTab(index) {
-      const tabs = document.querySelectorAll('.tab-btn');
-      const contents = document.querySelectorAll('.tab-content');
-      tabs.forEach(btn => btn.classList.remove('active'));
-      contents.forEach(c => c.classList.remove('active'));
-      tabs[index].classList.add('active');
-      contents[index].classList.add('active');
-    }
-  </script>
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>Para dúvidas ou sugestões, envie um e-mail para <strong>contato@neoncore.com</strong></p>
+  </section>
 </body>
 </html>
