--- a/index.html
+++ b/index.html
@@ -2,156 +2,162 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NeonCore RPG</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>NeonCore - RPG Cyberpunk</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://wallpapercave.com/wp/wp6927507.jpg') no-repeat center center fixed;
+      background-image: url('https://wallpapers.com/images/hd/urban-tokyo-cyberpunk-city-at-night-sti4a4a28q6oaoxi.jpg');
       background-size: cover;
+      background-position: center;
       color: #f0f0f0;
-    }header {
-  background-color: rgba(0, 0, 0, 0.85);
-  padding: 1rem 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 2px solid #00ffe1;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-
-header h1 {
-  color: #00ffe1;
-  font-size: 2rem;
-  margin: 0;
-}
-
-nav {
-  display: flex;
-  gap: 1rem;
-}
-
-nav a {
-  color: #ff00ff;
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s;
-}
-
-nav a:hover {
-  color: #00ffe1;
-}
-
-.menu-toggle {
-  display: none;
-  font-size: 1.5rem;
-  color: #ff00ff;
-  cursor: pointer;
-}
-
-section {
-  background-color: rgba(0, 0, 0, 0.75);
-  margin: 2rem auto;
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 0 20px #00ffe1;
-  max-width: 900px;
-  animation: fadeIn 1s ease-in;
-}
-
-h2 {
-  border-left: 4px solid #00ffe1;
-  padding-left: 0.5rem;
-  color: #00ffe1;
-}
-
-ul {
-  padding-left: 1.5rem;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-@media (max-width: 768px) {
-  nav {
-    display: none;
-    flex-direction: column;
-    background: rgba(0, 0, 0, 0.9);
-    position: absolute;
-    top: 60px;
-    right: 0;
-    padding: 1rem;
-  }
-
-  nav.open {
-    display: flex;
-  }
-
-  .menu-toggle {
-    display: block;
-  }
-}
-
+      padding: 0;
+    }
+    header {
+      background-color: rgba(0, 0, 0, 0.75);
+      text-align: center;
+      padding: 3rem 1rem;
+    }
+    header h1 {
+      font-size: 3rem;
+      color: #00ffe1;
+    }
+    main {
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 2rem;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+    h2 {
+      color: #00ffe1;
+      border-left: 4px solid #00ffe1;
+      padding-left: 0.5rem;
+    }
+    ul li strong {
+      color: #ff00ff;
+    }
+    .personagem {
+      display: flex;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+    .personagem img {
+      width: 150px;
+      margin-right: 1rem;
+      border-radius: 8px;
+    }
+    footer {
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 2rem;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>NeonCore RPG</h1>
-    <i class="fas fa-bars menu-toggle" onclick="toggleMenu()"></i>
-    <nav id="menu">
-      <a href="#inicio"><i class="fas fa-home"></i> Início</a>
-      <a href="#personagens"><i class="fas fa-users"></i> Personagens</a>
-      <a href="#contato"><i class="fas fa-envelope"></i> Contato</a>
-    </nav>
-  </header>  <section id="inicio">
-    <h2>1. Introdução</h2>
-    <p>Em um futuro distorcido por corporações, implantes cibernéticos e vigilância constante...</p>
-    <h2>2. Sistema de Regras (Leve)</h2>
-    <ul>
-      <li><strong>Dados Usados:</strong> Apenas 1d6</li>
-      <li><strong>Testes de Ação:</strong> 1–2: Fracasso, 3–4: Sucesso Parcial, 5–6: Sucesso Total</li>
-      <li><strong>Atributos:</strong>
-        <ul>
-          <li>Corpo – força, resistência, combate</li>
-          <li>Mente – lógica, tecnologia, conhecimento</li>
-          <li>Presença – carisma, persuasão, influência</li>
-        </ul>
-      </li>
-    </ul>
-    <h2>3. Criação de Personagem</h2>
-    <ul>
-      <li>Mercenário</li>
-      <li>Hacker</li>
-      <li>Tecnomante</li>
-      <li>Espião</li>
-    </ul>
-    <h2>4. Equipamentos e Cibernéticos</h2>
-    <p>1 implante cibernético + arma + comunicador</p>
-    <h2>5. Cenário: Neo-Tóquio, 2187</h2>
-    <p>Mega arranha-céus, luzes de néon, zonas de exclusão, corporações...</p>
-    <h2>6. Inspirações</h2>
-    <p>Edgerunners, Blade Runner, Ghost in the Shell, Akira</p>
-    <h2>7. Como Jogar</h2>
-    <p>Narrador + jogadores + dados = missões</p>
-  </section>  <section id="personagens">
-    <h2>Personagens</h2>
-    <ul>
-      <li><strong>Nyx:</strong> Espiã cibernética com visão noturna</li>
-      <li><strong>Vektor:</strong> Hacker das redes corporativas</li>
-      <li><strong>Ravena:</strong> Tecnomante que manipula robôs</li>
-    </ul>
-  </section>  <section id="contato">
-    <h2>Contato</h2>
-    <p>Fale com a gente: <strong>contato@neoncore.com</strong></p>
-  </section>  <script>
-    function toggleMenu() {
-      const nav = document.getElementById('menu');
-      nav.classList.toggle('open');
-    }
-  </script></body>
+    <h1>NeonCore – RPG Cyberpunk</h1>
+    <p>Ambientado em 2187 – Neo-Tóquio</p>
+  </header>
+  <main>
+    <section>
+      <h2>1. Introdução</h2>
+      <p>Em um futuro distorcido por corporações, implantes cibernéticos e vigilância constante, os jogadores interpretam personagens à margem da sociedade lutando por liberdade, justiça — ou apenas sobrevivência.</p>
+    </section>
+    <section>
+      <h2>2. Sistema de Regras (Leve)</h2>
+      <ul>
+        <li><strong>Dados Usados:</strong> Apenas 1d6</li>
+        <li><strong>Testes de Ação:</strong> 1–2: Fracasso, 3–4: Sucesso Parcial, 5–6: Sucesso Total</li>
+        <li><strong>Atributos:</strong>
+          <ul>
+            <li>Corpo – força, resistência, combate</li>
+            <li>Mente – lógica, tecnologia, conhecimento</li>
+            <li>Presença – carisma, persuasão, influência</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>3. Criação de Personagem</h2>
+      <p>Escolha nome, profissão, aparência, motivação e um arquétipo:</p>
+      <ul>
+        <li>Mercenário</li>
+        <li>Hacker</li>
+        <li>Tecnomante</li>
+        <li>Espião</li>
+      </ul>
+    </section>
+    <section>
+      <h2>4. Equipamentos e Cibernéticos</h2>
+      <p>Cada personagem começa com 1 implante cibernético, além de itens como arma e comunicador.</p>
+    </section>
+    <section>
+      <h2>5. Cenário: Neo-Tóquio, 2187</h2>
+      <p>Mega arranha-céus, luzes de néon, zonas de exclusão, e corporações como ZENNET e Takashi BioTek controlam o mundo.</p>
+    </section>
+    <section>
+      <h2>6. Inspirações</h2>
+      <p>Cyberpunk: Edgerunners, Blade Runner, Ghost in the Shell, Akira.</p>
+    </section>
+    <section>
+      <h2>7. Como Jogar</h2>
+      <p>Um jogador assume o papel de Narrador. Os outros interpretam personagens em missões, rolando dados sempre que houver risco ou incerteza.</p>
+    </section>
+    <section>
+      <h2>8. Personagens</h2>
+      <div class="personagem">
+        <img src="personagem1.jpg" alt="Personagem 1">
+        <div>
+          <h3>Ryder</h3>
+          <p>Mercenário ex-militar com braço cibernético de combate e senso de honra distorcido.</p>
+        </div>
+      </div>
+      <div class="personagem">
+        <img src="personagem2.jpg" alt="Personagem 2">
+        <div>
+          <h3>Kira</h3>
+          <p>Hacker veloz com implante neural e passado desconhecido.</p>
+        </div>
+      </div>
+      <div class="personagem">
+        <img src="personagem3.jpg" alt="Personagem 3">
+        <div>
+          <h3>Syn</h3>
+          <p>Tecnomante que manipula redes digitais e realidades aumentadas.</p>
+        </div>
+      </div>
+      <div class="personagem">
+        <img src="personagem4.jpg" alt="Personagem 4">
+        <div>
+          <h3>Ghost</h3>
+          <p>Espião invisível com modificações de camuflagem e infiltração.</p>
+        </div>
+      </div>
+      <div class="personagem">
+        <img src="personagem5.jpg" alt="Personagem 5">
+        <div>
+          <h3>Luna</h3>
+          <p>Bioengenheira rebelde com implantes experimentais e intenções misteriosas.</p>
+        </div>
+      </div>
+      <div class="personagem">
+        <img src="personagem6.jpg" alt="Personagem 6">
+        <div>
+          <h3>Echo</h3>
+          <p>Vocalista de banda underground com habilidades sonoras destrutivas.</p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>9. Contato</h2>
+      <p>Email: contato@neoncore.com</p>
+      <p>Instagram: @neoncore_rpg</p>
+    </section>
+  </main>
+  <footer>
+    <p>NeonCore RPG © 2025</p>
+  </footer>
+</body>
 </html>
