--- a/index.html
+++ b/index.html
@@ -1,145 +1,121 @@
 <!DOCTYPE html><html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NeonCore - RPG Cyberpunk</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NeonCore RPG</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: url('https://images.unsplash.com/photo-1574821444343-579c6de7fba9?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: url('file-8E7HjrUsqPNCukqZBS2sMV') no-repeat center center fixed;
       background-size: cover;
-      color: #00ffe1;
+      color: #fff;
     }
-    nav {
-      background-color: rgba(0, 0, 0, 0.9);
-      padding: 1rem;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+    header {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 20px;
+      text-align: center;
     }
     nav a {
-      color: #00ffe1;
+      color: #fff;
       text-decoration: none;
+      margin: 0 15px;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 18px;
     }
     section {
-      padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.85);
-      margin: 2rem;
-      border-radius: 10px;
+      padding: 40px;
+      background-color: rgba(0, 0, 0, 0.6);
     }
-    h1, h2 {
-      color: #00ffe1;
+    h1, h2, h3 {
+      color: #f0f0f0;
     }
     .personagem {
       display: flex;
       align-items: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
+      margin-bottom: 30px;
     }
     .personagem img {
-      width: 200px;
+      width: 120px;
       height: auto;
-      border-radius: 10px;
+      border-radius: 8px;
+      margin-right: 20px;
+    }
+    footer {
+      background-color: rgba(0, 0, 0, 0.8);
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="#inicio">Início</a>
-    <a href="#personagens">Personagens</a>
-    <a href="#contato">Contato</a>
-  </nav>  <section id="inicio">
-    <h1>NeonCore – RPG Cyberpunk</h1>
-    <p>Ambientado em 2187 – Neo-Tóquio</p>
-    <h2>1. Introdução</h2>
-    <p>Em um futuro distorcido por corporações, implantes cibernéticos e vigilância constante, os jogadores interpretam personagens à margem da sociedade lutando por liberdade, justiça — ou apenas sobrevivência.</p><h2>2. Sistema de Regras (Leve)</h2>
-<ul>
-  <li><strong>Dados Usados:</strong> Apenas 1d6</li>
-  <li><strong>Testes de Ação:</strong> 1–2: Fracasso, 3–4: Sucesso Parcial, 5–6: Sucesso Total</li>
-  <li><strong>Atributos:</strong>
-    <ul>
-      <li>Corpo – força, resistência, combate</li>
-      <li>Mente – lógica, tecnologia, conhecimento</li>
-      <li>Presença – carisma, persuasão, influência</li>
-    </ul>
-  </li>
-</ul>
-
-<h2>3. Criação de Personagem</h2>
-<p>Escolha nome, profissão, aparência, motivação e um arquétipo:</p>
-<ul>
-  <li>Mercenário</li>
-  <li>Hacker</li>
-  <li>Tecnomante</li>
-  <li>Espião</li>
-</ul>
-
-<h2>4. Equipamentos e Cibernéticos</h2>
-<p>Cada personagem começa com 1 implante cibernético, além de itens como arma e comunicador.</p>
-
-<h2>5. Cenário: Neo-Tóquio, 2187</h2>
-<p>Mega arranha-céus, luzes de néon, zonas de exclusão, e corporações como ZENNET e Takashi BioTek controlam o mundo.</p>
-
-<h2>6. Inspirações</h2>
-<p>Cyberpunk: Edgerunners, Blade Runner, Ghost in the Shell, Akira.</p>
-
-<h2>7. Como Jogar</h2>
-<p>Um jogador assume o papel de Narrador. Os outros interpretam personagens em missões, rolando dados sempre que houver risco ou incerteza.</p>
-
+  <header>
+    <h1>NeonCore</h1>
+    <nav>
+      <a href="#inicio">Início</a>
+      <a href="#personagens">Personagens</a>
+      <a href="#contato">Contato</a>
+    </nav>
+  </header>  <section id="inicio">
+    <h2>Vivencie a experiência definitiva de NeonCore</h2>
+    <p><strong>Introdução:</strong> Em um futuro distópico dominado por corporações e tecnologia, você viverá aventuras em meio a neon, concreto e caos urbano. Explore o mundo de NeonCore, onde tudo tem um preço.</p>
+    <p><strong>Como jogar:</strong> Use dados de 6 lados, escolha suas ações com base nas fichas dos personagens e nas decisões do narrador. Jogue em grupo para desvendar conspirações, sobreviver a combates e conquistar respeito.</p>
+    <p><strong>Inspiração:</strong> Jogos como Cyberpunk 2077, filmes como Blade Runner, Akira e Ghost in the Shell.</p>
+    <p><strong>Sistema de regras:</strong> Os personagens possuem atributos como Força, Reflexo, Técnica e Carisma. Ações são decididas por rolagem de dados mais modificadores.</p>
+    <p><strong>Criação de personagens:</strong> Cada jogador escolhe uma classe, distribui pontos de atributos e habilidades, define equipamentos e traços de personalidade.</p>
+    <p><strong>Equipamentos:</strong> Armas de fogo, implantes cibernéticos, drones, armaduras leves e itens furtivos.</p>
+    <p><strong>Cenário:</strong> Uma mega cidade inspirada em Tóquio futurista, com setores industriais, zonas de luxo e favelas verticais. Corporações controlam a mídia e a política, e gangues dominam as ruas.</p>
   </section>  <section id="personagens">
     <h2>Personagens</h2>
     <div class="personagem">
-      <img src="https://i.imgur.com/y3PbLUx.png" alt="Mira Vex">
+      <img src="https://i.imgur.com/1X0ZMeM.png" alt="Kaoru" />
       <div>
-        <h3>Mira Vex</h3>
-        <p>Hacktivista misteriosa com implantes oculares que decodificam sistemas em segundos.</p>
+        <h3>Kaoru</h3>
+        <p>Hacktivista especialista em infiltração de redes corporativas e sabotagem de sistemas.</p>
       </div>
     </div>
     <div class="personagem">
-      <img src="https://i.imgur.com/FZBf7to.png" alt="Dante Zero">
+      <img src="https://i.imgur.com/80DsRyX.png" alt="Sage" />
       <div>
-        <h3>Dante Zero</h3>
-        <p>Mercenário endurecido por batalhas, equipado com braço cibernético e visor tático.</p>
+        <h3>Sage</h3>
+        <p>Médica de campo com implantes cirúrgicos e acesso ao mercado negro cibernético.</p>
       </div>
     </div>
     <div class="personagem">
-      <img src="https://i.imgur.com/Rc0u1Rj.png" alt="Aya Flux">
+      <img src="https://i.imgur.com/LpVaDgP.png" alt="Jinx" />
       <div>
-        <h3>Aya Flux</h3>
-        <p>Tecnomante rebelde que controla máquinas com a mente e manipula dados no ar.</p>
+        <h3>Jinx</h3>
+        <p>Mercenária com braços robóticos e passado obscuro nas arenas de combate ilegal.</p>
       </div>
     </div>
     <div class="personagem">
-      <img src="https://i.imgur.com/GvNNWjO.png" alt="Ryker Shade">
+      <img src="https://i.imgur.com/NghqHTa.png" alt="Echo" />
       <div>
-        <h3>Ryker Shade</h3>
-        <p>Espião silencioso com implante de invisibilidade e biochip de memórias falsas.</p>
+        <h3>Echo</h3>
+        <p>Especialista em drones e espionagem, ex-funcionário de uma megacorporação.</p>
       </div>
     </div>
     <div class="personagem">
-      <img src="https://i.imgur.com/YTzvFSa.png" alt="Kaori Blaze">
+      <img src="https://i.imgur.com/ncHFvGi.png" alt="Nova" />
       <div>
-        <h3>Kaori Blaze</h3>
-        <p>Corredora de dados que hackeia drones em movimento e dirige como uma lenda urbana.</p>
+        <h3>Nova</h3>
+        <p>Engenheira rebelde que constrói armas artesanais e manipula tecnologia alienígena.</p>
       </div>
     </div>
     <div class="personagem">
-      <img src="https://i.imgur.com/5HbyAj8.png" alt="Hex">
+      <img src="https://i.imgur.com/Mi45PSp.png" alt="Raze" />
       <div>
-        <h3>Hex</h3>
-        <p>Androide autônomo que busca identidade própria enquanto elimina ameaças corporativas.</p>
+        <h3>Raze</h3>
+        <p>Ex-policial agora caçador de recompensas, mestre em rastreamento urbano e negociação.</p>
       </div>
     </div>
   </section>  <section id="contato">
     <h2>Contato</h2>
-    <p>Quer jogar ou tem dúvidas? Envie um e-mail para <a href="mailto:rpgneoncore@email.com" style="color:#00ffe1;">rpgneoncore@email.com</a>.</p>
-  </section>
+    <p>Quer saber mais ou baixar o PDF completo? Envie um e-mail para <strong>contato@neoncore.com</strong></p>
+  </section>  <footer>
+    <p>&copy; 2025 NeonCore RPG. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
